[gd_scene load_steps=4 format=4 uid="uid://drs35ir7tme66"]

[ext_resource type="Script" path="res://world/world.gd" id="1_2vkgl"]
[ext_resource type="TileSet" uid="uid://qydm831wiegm" path="res://world/platform_tiles.tres" id="2_ujo6d"]
[ext_resource type="PackedScene" uid="uid://cmiybl3yy4eh0" path="res://world/hud.tscn" id="3_5j0m0"]

[node name="World" type="Node2D"]
script = ExtResource("1_2vkgl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 160.0
offset_bottom = 160.0
color = Color(0, 0, 0, 1)

[node name="TileLayer" type="TileMapLayer" parent="."]
texture_filter = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAA4AAAAFAAEAAAABAA4AAAAFAAEAAAACAA4AAAAFAAEAAAADAA4AAAAFAAEAAAAEAA4AAAAFAAEAAAAFAA4AAAADAAEAAAAPAA4AAAABAAEAAAAQAA4AAAAFAAEAAAARAA4AAAAFAAEAAAASAA4AAAAFAAEAAAATAA4AAAAFAAEAAAAUAA4AAAADAAEAAAD//w4AAAABAAEAAAADAAsAAAABAAEAAAAEAAsAAAAFAAEAAAAPAAsAAAABAAEAAAAQAAsAAAAFAAEAAAARAAsAAAADAAEAAAAMAAkAAAAFAAEAAAANAAkAAAADAAEAAAALAAkAAAABAAEAAAAFAAsAAAADAAEAAAAGAAgAAAABAAEAAAAHAAgAAAAFAAEAAAAIAAgAAAADAAEAAAALAAUAAAABAAEAAAAMAAUAAAADAAEAAAAPAAcAAAABAAEAAAAQAAcAAAADAAEAAAAFAAUAAAADAAEAAAAEAAUAAAAFAAEAAAADAAUAAAAFAAEAAAACAAUAAAABAAEAAAA=")
tile_set = ExtResource("2_ujo6d")

[node name="Players" type="Node2D" parent="."]

[node name="HUD" parent="." instance=ExtResource("3_5j0m0")]

[node name="TotemSpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="player_color_changed" from="." to="HUD" method="_on_world_player_color_changed"]
[connection signal="player_died" from="." to="HUD" method="_on_world_player_died"]
[connection signal="player_joined" from="." to="HUD" method="_on_world_player_joined"]
[connection signal="new_game_started" from="HUD" to="." method="_on_hud_new_game_started"]
[connection signal="new_round_started" from="HUD" to="." method="_on_hud_new_round_started"]
